# razer-mouse-monitor

./: .gitignore  CMakeLists.txt  README.md  install-hidraw-permissions.sh  run.sh
packaging/: razer-mouse-monitor.desktop
scripts/: build-appimage.sh  install-desktop-entry.sh
src/: MainWindow.cpp  MainWindow.h  MouseInfo.cpp  MouseInfo.h  RazerHidBackend.cpp  RazerHidBackend.h  main.cpp
tests/: test_mouseinfo.cpp
